tests/fails/f20.t
if not require("fail") then return end

terra foo()
    return niltype + "a"
end
foo()
